# taskwarrior-mcp

./: .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  mise.toml  pyproject.toml  taskwarrior_mcp.py
.github/workflows/: ci.yml
docs/: agent-tool-improvements.md
docs/adr/: 0000-template.md  0001-adopt-conventional-commits.md
examples/: README.md  advanced-config.json  claude-code-cli.json  claude-desktop-windows.json  multiple-databases.json  uvx-config.json
taskwarrior_mcp/: __init__.py  enums.py  server.py
taskwarrior_mcp/models/: __init__.py  inputs.py  intelligence.py  task.py
taskwarrior_mcp/tools/: __init__.py  core.py  intelligence.py
taskwarrior_mcp/utils/: __init__.py  cli.py  formatters.py  parsers.py
tests/: __init__.py  conftest.py  test_taskwarrior_mcp.py
